--- a/index.css
+++ b/index.css
@@ -1,4 +1,17 @@
-body {
-font-family: sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Dosis');
 
+
+body {
+font-family: Dosis, sans-serif;
+}
+
+main {
+    display: flex;
+    justify-content: space-around;
+}
+
+#userForm {
+    background-color: #eeeeee; 
+    border:2px solid #e3e3e3;
+    padding: 1rem;
 }
