--- a/index.css
+++ b/index.css
@@ -15,3 +15,15 @@ main {
     border:2px solid #e3e3e3;
     padding: 1rem;
 }
+
+dl{
+    padding: 1rem;
+}
+dl li {
+    list-style: none;
+    margin-top: 1rem;
+}
+dl:nth-of-type(even) {
+    background-color: WhiteSmoke;
+
+}
